# AI-Employee-System

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
AI_Employee_Vault/: .approved_plans_executed.json  .conversation_history.json  .dashboard_stats.json  .google_chat_cache.json  Company_Handbook.md  Dashboard.md  ai_employee.db
AI_Employee_Vault/Inbox/: EMAIL - Need-to-take-an-serious-fee_19bb977e.md
AI_Employee_Vault/Needs_Action/: EMAIL_test_contract.md
Watchers/: __init__.py  base_watcher.py  failure_manager.py  gmail_watcher.py  google_chat_watcher.py
mcp_servers/: __init__.py  database_mcp.py
schedulers/: __init__.py  linkedin_scheduler.py  meeting_scheduler.py
schedules/: ai_employee_task.xml  run_ai_employee.bat  run_ai_employee.sh  setup_persistence.bat
skills/: __init__.py  approved_plan_executor.py  ceo_briefing.py  dashboard_updater.py  email_planner.py  email_sender.py  email_to_inbox.py  keyword_analyzer.py  linkedin_manager.py  mcp_database.py  meeting_scheduler_skill.py  task_processor.py  vault_update.py
