[project]
name = "ai-employee-vault"
version = "0.1.0"
description = "AI Employee system with Obsidian vault integration and watchers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.187.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.3",
    "watchdog>=5.0.0",
    "pyyaml>=6.0.0",
    "google-auth>=2.41.1",
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.9.0.post0",
    "playwright>=1.57.0",
    "zhipuai>=2.1.5.20250825",
]

[project.scripts]
ai-employee = "main:main"
